chore: adicionando sonar-scanner no gitignore e token de autenticação do sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,4 +12,4 @@ sonar.python.flake8=true
 sonar.exclusions=venv/**/*, .git/**/*, __pycache__/**/*
 sonar.host.url=http://localhost:9000
 
-# sonar.login=<token gerado pelo Sonar no Docker>
+sonar.login=sqa_870917763cb1b186e59e6c9fb350eff101479399
